# receipt-evals

./: .gitignore  README.md  pyproject.toml
outputs/review_viewer/: index.html
scripts/: assess_receipt.py  build_receipt_review_viewer.py  evaluate_receipt_graders.py  rerun_audits.py  run_receipt.py
src/receipt_evals/: __init__.py  audit.py  extraction.py  openai_client.py  schemas.py  workflow.py
src/receipt_review/: __init__.py  config.py  graders.py  image_preflight.py  schemas.py  workflow.py
src/receipt_review/domain/: __init__.py
src/receipt_review/llm/: openai_client.py
src/receipt_review/steps/: __init__.py  audit.py  extraction.py
tests/: test_audit.py  test_extraction.py
