[project]
name = "receipt-evals"
version = "0.1.0"
description = "Small receipt review workflow for extraction and audit decisions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.8.1",
  "pydantic>=2.12.0",
  "python-dotenv>=1.2.0",
]

[project.scripts]
review-receipt = "receipt_review.workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/receipt_review"]
